--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,17 @@
 @font-face {
   font-family: "Open Sans";
-  src: url("https://netology-code.github.io/html-2-diploma/sources/fonts/OpenSans-Regular.woff");
+  src: url("../sources/fonts/OpenSans-Regular.ttf"),
+    url("../sources/fonts/OpenSans-Regular.woff"),
+    url("../sources/fonts/OpenSans-Regular.woff2");
   font-style: normal;
   font-weight: normal;
 }
 
 @font-face {
   font-family: "Open Sans";
-  src: url("https://netology-code.github.io/html-2-diploma/sources/fonts/OpenSans-Bold.woff");
+  src: url("../sources/fonts/OpenSans-Bold.ttf"),
+    url("../sources/fonts/OpenSans-Bold.woff"),
+    url("../sources/fonts/OpenSans-Bold.woff2");
   font-style: normal;
   font-weight: bold;
 }
@@ -20,7 +24,7 @@
 }
 
 body {
-  font-family: "Open Sans Regular", sans-serif;
+  font-family: "Open Sans", sans-serif;
   margin: 0;
 }
 
@@ -61,14 +65,14 @@ figure {
 .header {
   position: relative;
   z-index: 3;
-  background-image: url("https://netology-code.github.io/html-2-diploma/sources/images/banner-bg.jpg");
+  background-image: url(../sources/img/banner-bg.jpg);
   background-repeat: no-repeat;
   height: 448px;
   background-size: cover;
 }
 
 .container {
-  width: 1200px;
+  min-width: 100%;
   margin-left: auto;
   margin-right: auto;
   padding: 0 15px;
@@ -76,7 +80,7 @@ figure {
 
 .header-top {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   padding-top: 36px;
 }
@@ -88,7 +92,6 @@ figure {
 }
 
 .nav {
-  margin-top: -19px;
 }
 
 .nav-list {
@@ -96,7 +99,6 @@ figure {
 }
 
 .nav-item {
-  margin-right: -2px;
   color: white;
   text-transform: uppercase;
 }
@@ -127,7 +129,71 @@ figure {
   margin: auto;
 }
 
+/* ================ TRENDS ================ */
+
+.trends {
+  flex-direction: column;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  padding-top: 48px;
+}
+
+.trends-title {
+  text-transform: uppercase;
+  font-size: 20px;
+  color: #0f0d0e;
+  font-weight: 700;
+}
+
+.trends-title::after {
+  margin: 11px auto 0;
+  content: "";
+  display: block;
+  height: 3px;
+  width: 66px;
+  background-color: #e1d9bd;
+}
+
+.trends-cards-block {
+  display: flex;
+  gap: 4px;
+}
+
+.trends-card {
+  position: relative;
+  z-index: 1;
+}
+
+.trends-card:before {
+  z-index: 2;
+  content: "";
+  display: block;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.6);
+}
+
+.trends-inner {
+  z-index: 3;
+  color: #ffffff;
+}
+
+.inner-title {
+  color: white;
+}
+
+.span-inner-tag {
+  color: #ffffff;
+  z-index: 4;
+}
 /* ================ MAIN ================ */
+
 .main-container {
   display: flex;
   justify-content: space-between;
