--- a/css/style.css
+++ b/css/style.css
@@ -682,6 +682,114 @@ p {
   vertical-align: super;
 }
 
+/* ================ PRODUCTS ================ */
+
+.products {
+  margin-top: 68px;
+  /* margin-top: 0-16px не отображается */
+}
+
+.products-title {
+  text-align: center;
+  font-size: 20px;
+  text-transform: uppercase;
+  font-size: 20px;
+  color: #0f0d0e;
+  font-weight: 700;
+}
+
+.products-title::after {
+  margin: 8px auto 12px;
+  content: "";
+  display: block;
+  height: 3px;
+  width: 66px;
+  background-color: #e1d9bd;
+}
+
+.products-wrapper {
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  width: 1200px;
+  padding: 0 39px;
+}
+
+.products-inner {
+  outline: 3px solid #b59f5b;
+  outline-offset: 20px;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+}
+
+.products-inner-title {
+  font-size: 20px;
+  text-transform: uppercase;
+  color: #0f0d0e;
+  font-weight: 700;
+}
+
+.products-description {
+  font-size: 15px;
+  line-height: 22px;
+  color: #0f0d0e;
+}
+
+.products-link {
+  color: #d3c59d;
+}
+
+.products-card {
+  display: flex;
+  width: 300px;
+  flex-direction: column;
+  background-repeat: no-repeat;
+}
+
+.products-img1 {
+  background-image: url(../sources/img/shop-item-desk1.jpg);
+  width: 300px;
+  height: 204px;
+}
+
+.products-img2 {
+  background-image: url(../sources/img/shop-item-desk2.jpg);
+  width: 300px;
+  height: 204px;
+}
+
+.products-img3 {
+  background-image: url(../sources/img/shop-item-desk3.jpg);
+  width: 300px;
+  height: 204px;
+}
+
+.price-button-block {
+  display: flex;
+  justify-content: space-between;
+}
+
+.old-price {
+  font-size: 14px;
+  text-decoration: line-through;
+  color: #0f0d0e;
+  font-weight: 700;
+}
+
+.new-price {
+  font-size: 20px;
+  text-transform: uppercase;
+  color: #0f0d0e;
+  font-weight: 700;
+}
+
+.btn-to-shop {
+  background-color: #b59f5b;
+  color: white;
+  width: 140px;
+  height: 49px;
+}
 /* ================ FOOTER ================ */
 
 .footer {
