--- a/css/style.css
+++ b/css/style.css
@@ -850,3 +850,92 @@ p {
   font-weight: 700;
   text-align: center;
 }
+
+/* ================ POPUP ================ */
+
+.popup {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  top: 0;
+  left: 0;
+}
+
+.popup-body {
+  min-height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.popup-content {
+  background-color: #fff;
+  color: #000000;
+  max-width: 390px;
+  padding: 30px;
+}
+
+.popup-title {
+  text-align: center;
+  font-size: 20px;
+  text-transform: uppercase;
+  color: #0f0d0e;
+  font-weight: 700;
+}
+
+.popup-title::after {
+  margin: 8px auto 12px;
+  content: "";
+  display: block;
+  height: 3px;
+  width: 66px;
+  background-color: #e1d9bd;
+}
+
+.popup-how-often {
+  font-size: 13px;
+  margin-bottom: 11px;
+}
+
+.select {
+  background-color: #f4f7f6;
+  padding: 19px;
+  opacity: 0.541;
+  font-size: 13px;
+  color: #000000;
+  border: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  background-image: url(../sources/svg/form-arrows.svg) no-repeat right;
+  background-size: contain;
+  width: 100%;
+}
+
+.option {
+}
+
+.email-sendings {
+  margin-top: 36px;
+  margin-bottom: 11px;
+}
+
+.textarea {
+  background-color: #f4f7f6;
+  border: none;
+  width: 100%;
+  padding: 22px;
+  height: 131px;
+  margin-bottom: 27px;
+}
+
+.popup-button {
+  font-size: 14px;
+  text-transform: uppercase;
+  color: #ffffff;
+  font-weight: 700;
+  background-color: #b59f5b;
+  width: 100%;
+  height: 48px;
+  border: none;
+}
