--- a/css/style.css
+++ b/css/style.css
@@ -885,7 +885,7 @@ p {
 }
 
 .popup-title::after {
-  margin: 8px auto 12px;
+  margin: 8px auto 25px;
   content: "";
   display: block;
   height: 3px;
@@ -895,7 +895,7 @@ p {
 
 .popup-how-often {
   font-size: 13px;
-  margin-bottom: 11px;
+  margin-bottom: 5px;
 }
 
 .select {
@@ -903,12 +903,15 @@ p {
   padding: 19px;
   opacity: 0.541;
   font-size: 13px;
+  letter-spacing: 0.3px;
   color: #000000;
   border: none;
   -webkit-appearance: none;
   -moz-appearance: none;
-  background-image: url(../sources/svg/form-arrows.svg) no-repeat right;
-  background-size: contain;
+  background-image: url(../sources/svg/form-arrows.svg);
+  background-position: center right 15px;
+  background-repeat: no-repeat;
+  background-size: 10px;
   width: 100%;
 }
 
@@ -916,8 +919,17 @@ p {
 }
 
 .email-sendings {
-  margin-top: 36px;
+  margin-top: 27px;
   margin-bottom: 11px;
+  font-size: 13px;
+}
+
+.radio-block {
+  margin-bottom: 20px;
+}
+
+.label-textarea {
+  font-size: 13px;
 }
 
 .textarea {
@@ -927,6 +939,8 @@ p {
   padding: 22px;
   height: 131px;
   margin-bottom: 27px;
+  margin-top: 2px;
+  resize: none;
 }
 
 .popup-button {
@@ -938,4 +952,6 @@ p {
   width: 100%;
   height: 48px;
   border: none;
+  margin-bottom: 24px;
+  cursor: pointer;
 }
