--- a/css/style.css
+++ b/css/style.css
@@ -165,7 +165,7 @@ p {
 
 .trends-card {
   position: relative;
-  max-width: 410px;
+  max-width: 25%;
   height: 319px;
   display: flex;
   align-items: flex-end;
@@ -210,6 +210,7 @@ p {
 
 .trends-card {
   background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .seedling-img {
@@ -275,23 +276,23 @@ p {
 }
 
 .card-img1 {
-  background-image: url(../sources/img/last-post1.jpg);
+  /* background-image: url(../sources/img/last-post1.jpg); */
 }
 
 .card-img2 {
-  background-image: url(../sources/img/last-post2.jpg);
+  /* background-image: url(../sources/img/last-post2.jpg); */
 }
 
 .card-img3 {
-  background-image: url(../sources/img/last-post3.jpg);
+  /* background-image: url(../sources/img/last-post3.jpg); */
 }
 
 .card-img4 {
-  background-image: url(../sources/img/last-post4.jpg);
+  /* background-image: url(../sources/img/last-post4.jpg); */
 }
 
 .card-img5 {
-  background-image: url(../sources/img/last-post5.jpg);
+  /* background-image: url(../sources/img/last-post5.jpg); */
 }
 /* object-fit: contain; */
 /* height: 294px; */
@@ -436,23 +437,23 @@ p {
 }
 
 .aside-img1 {
-  background-image: url(../sources/img/2.jpg);
+  /* background-image: url(../sources/img/2.jpg); */
 }
 
 .aside-img2 {
-  background-image: url(../sources/img/151.jpg);
+  /* background-image: url(../sources/img/151.jpg); */
 }
 
 .aside-img3 {
-  background-image: url(../sources/img/45.jpg);
+  /* background-image: url(../sources/img/45.jpg); */
 }
 
 .aside-img4 {
-  background-image: url(../sources/img/501.jpg);
+  /* background-image: url(../sources/img/501.jpg); */
 }
 
 .aside-img5 {
-  background-image: url(../sources/img/7.jpg);
+  /* background-image: url(../sources/img/7.jpg); */
 }
 
 .aside-text {
