--- a/css/style.css
+++ b/css/style.css
@@ -752,8 +752,6 @@ p {
 .products-inner {
   outline: 3px solid #b59f5b;
   outline-offset: 20px;
-  display: flex;
-  flex-direction: column;
   flex-grow: 1;
 }
 
@@ -823,6 +821,9 @@ p {
 }
 
 .btn-to-shop {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: #b59f5b;
   color: white;
   width: 140px;
@@ -889,11 +890,12 @@ p {
 /* ================ POPUP ================ */
 
 .hidden {
-  display: none;
+  /* display: none; */
 }
 
 .popup {
-  position: relative;
+  position: fixed;
+  z-index: 9999;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.6);
@@ -913,6 +915,16 @@ p {
   color: #000000;
   max-width: 390px;
   padding: 30px;
+  position: relative;
+}
+
+.popup-close {
+  position: absolute;
+  top: -22px;
+  right: -2px;
+  width: 20px;
+  height: 20px;
+  cursor: pointer;
 }
 
 .popup-title {
