--- a/css/style.css
+++ b/css/style.css
@@ -974,8 +974,43 @@ p {
   font-size: 13px;
 }
 
-.radio-block {
+.popup-radio-block {
   margin-bottom: 20px;
+}
+
+.radio-group {
+  display: inline-block;
+  font-size: 13px;
+}
+
+.radio-group:nth-of-type(n + 2) {
+  margin-left: 12px;
+}
+
+.radio1 {
+  display: none;
+}
+
+.radio1:checked ~ .label-radio-no::before,
+.radio1:checked ~ .label-radio-yes::before {
+  background-image: url(../sources/svg/form-circle.svg);
+}
+
+.label-radio-yes::before,
+.label-radio-no::before {
+  content: "";
+  display: inline-block;
+
+  vertical-align: middle;
+  /* margin-right: 8px; */
+
+  width: 20px;
+  height: 20px;
+
+  background-image: url(../sources/svg/form-empty-circle.svg);
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: 18px;
 }
 
 .label-textarea {
