--- a/css/style.css
+++ b/css/style.css
@@ -393,14 +393,18 @@ p {
   margin-top: 47px;
 }
 
-.description-container > p {
+.description {
   letter-spacing: 0.2px;
   font-size: 15px;
   line-height: 22px;
   color: #0f0d0e;
 }
 
-.description-container > p:not(:last-child) {
+/* .description-container > p:not(:last-child) {
+  margin-bottom: 10px;
+} */
+
+.description:not(:last-child) {
   margin-bottom: 10px;
 }
 
@@ -482,8 +486,6 @@ p {
 
 .aside-datetime {
   display: block;
-  /* margin-left: -9px; */
-  /* отрицательный марджин */
   opacity: 0.541;
   font-size: 12px;
   color: #000000;
@@ -491,8 +493,6 @@ p {
 
 .aside-card-title {
   margin-top: 4px;
-  /* margin-left: -8px; */
-  /* отрицательный марджин */
   letter-spacing: -0.5px;
   font-size: 14px;
   line-height: 18px;
@@ -1040,6 +1040,7 @@ p {
 }
 
 /* =================MEDIA============= */
+/* =================MEDIA-HEADER============= */
 
 @media (min-width: 641px) and (max-width: 1199px) {
   .header {
@@ -1080,6 +1081,8 @@ p {
     top: 4px;
   }
 
+  /* =================MEDIA-TRENDS============= */
+
   .trends {
     padding-top: 29px;
   }
@@ -1093,6 +1096,11 @@ p {
     height: 247px;
   }
 
+  .trends-inner {
+    padding-top: 30px;
+    padding-left: 32px;
+  }
+
   .trends-title {
     font-size: 18px;
   }
@@ -1104,22 +1112,71 @@ p {
   .inner-title {
     font-size: 17px;
     line-height: 22px;
+    margin-top: 6px;
   }
+
+  .title-small {
+    /* width: 240px; */
+  }
+
+  /* =================MEDIA-MAIN============= */
 
   .main-container {
     max-width: 768px;
+    padding: 40px 35px 0;
   }
 
   .main {
     flex-grow: 1;
+    margin-top: 8px;
   }
 
   .main-card {
     display: block;
+    max-width: 392px;
   }
 
   .card-img {
     width: 392px;
+    height: 302.484px;
+  }
+
+  .card-text {
+    margin-left: 0;
+    margin-top: -3px;
+  }
+
+  .card-title {
+    max-width: 392px;
+  }
+
+  .title-link {
+    font-size: 17px;
+    line-height: 22px;
+    letter-spacing: -0.1px;
+  }
+
+  .date {
+    margin-top: 25px;
+    margin-left: -3px;
+  }
+
+  .author {
+    letter-spacing: -0.1px;
+  }
+
+  .description-container {
+    margin-top: 27px;
+  }
+
+  .description {
+    letter-spacing: 0px;
+  }
+
+  /* =================MEDIA-ASIDE============= */
+
+  .aside-card-link {
+    letter-spacing: -0.1px;
   }
 }
 
