--- a/css/style.css
+++ b/css/style.css
@@ -744,7 +744,7 @@ p {
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
-  width: 1200px;
+  max-width: 1200px;
   padding: 0 39px;
 }
 
@@ -1048,11 +1048,6 @@ p {
     height: 392px;
   }
 
-  h1 {
-    padding-top: 86px;
-    padding-left: 42px;
-  }
-
   .nav {
     display: none;
   }
@@ -1069,6 +1064,9 @@ p {
     font-size: 40px;
     line-height: 55px;
     padding-top: 86px;
+    /*
+    padding-left: 42px; 
+    ответ*/
   }
 
   .header-top {
@@ -1099,6 +1097,9 @@ p {
   .trends-inner {
     padding-top: 30px;
     padding-left: 32px;
+
+    width: 100%;
+    /* ответ */
   }
 
   .trends-title {
@@ -1209,10 +1210,24 @@ p {
     margin-bottom: 19px;
     margin-left: -5px;
   }
+
+  .products-wrapper {
+    flex-wrap: wrap;
+    max-width: 1199px;
+    justify-content: space-around;
+  }
+
+  .products-title {
+    letter-spacing: -1.4px;
+  }
 }
 
 @media (min-width: 641px) and (max-width: 1199px) and (orientation: landscape) {
   .trends-cards-block {
     /* flex-wrap: nowrap; */
+  }
+
+  .trends-card {
+    /* min-width: calc(25% - 4px); */
   }
 }
