--- a/css/style.css
+++ b/css/style.css
@@ -891,7 +891,7 @@ p {
 /* ================ POPUP ================ */
 
 .hidden {
-  display: none;
+  /* display: none; */
 }
 
 .popup {
@@ -978,6 +978,7 @@ p {
 
 .popup-radio-block {
   margin-bottom: 20px;
+  position: relative;
 }
 
 .radio-group {
@@ -991,6 +992,19 @@ p {
 
 .radio1 {
   display: none;
+}
+
+.radio-group:first-child {
+  margin-right: 15px;
+}
+
+.radio-yes {
+  position: absolute;
+  top: 0px;
+}
+
+.radio-no {
+  position: absolute;
 }
 
 .radio1:checked ~ .label-radio-no::before,
@@ -1009,7 +1023,7 @@ p {
   background-image: url(../sources/svg/form-empty-circle.svg);
   background-repeat: no-repeat;
   background-position: center center;
-  background-size: 18px;
+  background-size: 20px;
 }
 
 .label-textarea {
@@ -1041,8 +1055,8 @@ p {
   cursor: pointer;
 }
 
-/* =================MEDIA============= */
-/* =================MEDIA-HEADER============= */
+/* ================TABLET============= */
+/* ================TABLET-HEADER============= */
 
 @media (min-width: 641px) and (max-width: 1199px) {
   .header {
@@ -1081,7 +1095,7 @@ p {
     top: 4px;
   }
 
-  /* =================MEDIA-TRENDS============= */
+  /* ================TABLET-TRENDS============= */
 
   .trends {
     padding-top: 29px;
@@ -1122,7 +1136,7 @@ p {
     /* width: 240px; */
   }
 
-  /* =================MEDIA-MAIN============= */
+  /* ================TABLET-MAIN============= */
 
   .main-container {
     max-width: 768px;
@@ -1176,7 +1190,7 @@ p {
     letter-spacing: 0px;
   }
 
-  /* =================MEDIA-ASIDE============= */
+  /* ================TABLET-ASIDE============= */
 
   .aside-card {
     margin-bottom: 18px;
@@ -1194,7 +1208,7 @@ p {
     margin-left: 19px;
   }
 
-  /* =================MEDIA-SEARCH============= */
+  /* ================TABLET-SEARCH============= */
 
   .aside-card:last-of-type {
     margin-bottom: 56px;
@@ -1213,7 +1227,7 @@ p {
     margin-left: -5px;
   }
 
-  /* =================MEDIA-PRODUCTS============= */
+  /* ================TABLET-PRODUCTS============= */
 
   .products-wrapper {
     flex-wrap: wrap;
@@ -1241,12 +1255,14 @@ p {
     font-weight: 700;
   }
 
-  /* =================MEDIA-FOOTER============= */
+  /* ================TABLET-FOOTER============ */
 
   .footer-wrapper {
     max-width: 699px;
   }
 }
+
+/* ==============TABLET-LANDSCAPE============*/
 
 /* @media (min-width: 641px) and (max-width: 1199px) and (orientation: landscape) {
   .trends-cards-block {
