--- a/css/style.css
+++ b/css/style.css
@@ -287,7 +287,6 @@ p {
 }
 
 .card-img {
-  /* background-repeat: no-repeat; */
   width: 381px;
   height: 294px;
 }
@@ -1327,32 +1326,41 @@ p {
 } */
 
 /* ==============MOBILE============*/
+/* ==============MOBILE-HEADER============*/
 
 @media (max-width: 640px) {
   .header {
     background-image: url(../sources/img/banner-mobile.jpg);
+    height: 639px;
   }
 
   .header-top {
-    /* display: block; */
+    display: block;
+    position: relative;
     /* mob */
   }
+
   .nav {
     display: none;
   }
 
   .burger {
-    position: relative;
+    position: absolute;
     z-index: 3;
     display: block;
-    padding-top: 10px;
-    padding-right: 15px;
+    top: 25px;
+    right: -3px;
   }
 
   .h1 {
-    font-size: 40px;
-    line-height: 55px;
-    padding-top: 86px;
+    font-size: 26px;
+    line-height: 36px;
+    padding-top: 240px;
+  }
+
+  .container {
+    display: flex;
+    flex-direction: column;
   }
 
   .header-top {
@@ -1361,8 +1369,114 @@ p {
   }
 
   .logo {
-    width: 158px;
+    /* width: 158px;
     left: 20px;
-    top: 4px;
+    top: 4px; */
+    width: 267px;
+    left: 31px;
+    top: 211px;
+  }
+
+  /* ==============MOBILE-TRENDS============*/
+
+  .trends {
+    padding-top: 25px;
+  }
+
+  .trends-title {
+    font-size: 16px;
+  }
+
+  .trends-cards-block {
+    flex-direction: column;
+    flex-wrap: wrap;
+    width: 100%;
+  }
+
+  .trends-card {
+    max-width: 100%;
+    max-height: 231px;
+  }
+
+  .trends-inner {
+    padding-left: 16px;
+  }
+
+  .inner-title {
+    font-size: 16px;
+    line-height: 20px;
+  }
+
+  /* ==============MOBILE-MAIN============*/
+
+  .main-container {
+    padding-top: 40px;
+    flex-direction: column;
+  }
+
+  .main {
+    max-width: 100%;
+  }
+
+  .main-card {
+    flex-direction: column;
+  }
+
+  .main-card:not(:last-child) {
+    padding-bottom: 12px;
+  }
+
+  .card-img {
+    width: 328px;
+    height: 255px;
+  }
+
+  .card-text {
+    margin-left: 0;
+
+    margin-top: -8px;
+    /* мобилка, не уверен */
+  }
+
+  .title-link {
+    font-size: 16px;
+    line-height: 20px;
+    letter-spacing: -0.1px;
+  }
+
+  .date {
+    margin-top: -6px;
+    /* мобилка, не уверен */
+  }
+
+  .author {
+    letter-spacing: 0px;
+    margin-left: 7px;
+  }
+
+  .description-container {
+    margin-top: 13px;
+  }
+
+  .description {
+    font-size: 14px;
+    line-height: 20px;
+    letter-spacing: 0.1px;
+  }
+
+  /* ==============MOBILE-PRODUCTS============*/
+
+  .products-card {
+    width: 100%;
+  }
+
+  .products-wrapper {
+    flex-wrap: wrap;
+  }
+
+  /* ==============MOBILE-FOOTER============*/
+
+  .footer-wrapper {
+    max-width: 100%;
   }
 }
